creazione pagine, abbozzo css e inizio gestione clienti

--- a/views/addcustomer.hbs
+++ b/views/addcustomer.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="text-center">
-      <h3>DASHBOARD HOME</h3>
+      <h3>Inserimento nuovo cliente nel gestore automatico</h3>
     </div>
   </div>
 </div>
