--- a/views/costexe.hbs
+++ b/views/costexe.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="text-center">
-      <h3>DASHBOARD HOME</h3>
+      <h3>Chiamata al cost explore per analisi costi</h3>
     </div>
   </div>
 </div>
