--- a/views/costlist.hbs
+++ b/views/costlist.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="text-center">
-      <h3>DASHBOARD HOME</h3>
+      <h3>Visualizzaione lista delle analisi dei costi</h3>
     </div>
   </div>
 </div>
